--- a/documentation/project.events.html
+++ b/documentation/project.events.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html><head><title>Python: module events</title>
+<html><head><title>Python: module project.events</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head><body bgcolor="#f0f0f8">
 
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="heading">
 <tr bgcolor="#7799ee">
 <td valign=bottom>&nbsp;<br>
-<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>events</strong></big></big></font></td
+<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong><a href="project.html"><font color="#ffffff">project</font></a>.events</strong></big></big></font></td
 ><td align=right valign=bottom
 ><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:c%3A%5Cusers%5Cbalaji%5Conedrive%5Cprogramming%5Cprojects%5Ccallhecks%5Cproject%5Cevents.py">c:\users\balaji\onedrive\programming\projects\callhecks\project\events.py</a></font></td></tr></table>
     <p><tt>Define&nbsp;<a href="#Performance">Performance</a>&nbsp;objects.</tt></p>
@@ -29,10 +29,10 @@
 <dt><font face="helvetica, arial"><a href="builtins.html#object">builtins.object</a>
 </font></dt><dd>
 <dl>
-<dt><font face="helvetica, arial"><a href="events.html#Event">Event</a>
+<dt><font face="helvetica, arial"><a href="project.events.html#Event">Event</a>
 </font></dt><dd>
 <dl>
-<dt><font face="helvetica, arial"><a href="events.html#Performance">Performance</a>
+<dt><font face="helvetica, arial"><a href="project.events.html#Performance">Performance</a>
 </font></dt></dl>
 </dd>
 </dl>
@@ -86,7 +86,7 @@ Returns:<br>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
 <tr bgcolor="#ffc8d8">
 <td colspan=3 valign=bottom>&nbsp;<br>
-<font color="#000000" face="helvetica, arial"><a name="Performance">class <strong>Performance</strong></a>(<a href="events.html#Event">Event</a>)</font></td></tr>
+<font color="#000000" face="helvetica, arial"><a name="Performance">class <strong>Performance</strong></a>(<a href="project.events.html#Event">Event</a>)</font></td></tr>
     
 <tr bgcolor="#ffc8d8"><td rowspan=2><tt>&nbsp;&nbsp;&nbsp;</tt></td>
 <td colspan=2><tt><a href="#Performance">Performance</a>(name,&nbsp;start_time,&nbsp;duration=180,&nbsp;**metadata)<br>
@@ -94,8 +94,8 @@ Returns:<br>
 An&nbsp;event&nbsp;where&nbsp;users&nbsp;can&nbsp;vote&nbsp;on&nbsp;the&nbsp;performer.<br>&nbsp;</tt></td></tr>
 <tr><td>&nbsp;</td>
 <td width="100%"><dl><dt>Method resolution order:</dt>
-<dd><a href="events.html#Performance">Performance</a></dd>
-<dd><a href="events.html#Event">Event</a></dd>
+<dd><a href="project.events.html#Performance">Performance</a></dd>
+<dd><a href="project.events.html#Event">Event</a></dd>
 <dd><a href="builtins.html#object">builtins.object</a></dd>
 </dl>
 <hr>
@@ -154,7 +154,7 @@ Returns:<br>
 &nbsp;&nbsp;&nbsp;&nbsp;An&nbsp;Performer&nbsp;instance.</tt></dd>
 </dl>
 <hr>
-Methods inherited from <a href="events.html#Event">Event</a>:<br>
+Methods inherited from <a href="project.events.html#Event">Event</a>:<br>
 <dl><dt><a name="Performance-__eq__"><strong>__eq__</strong></a>(self, other)</dt><dd><tt>Return&nbsp;self==value.</tt></dd></dl>
 
 <dl><dt><a name="Performance-__hash__"><strong>__hash__</strong></a>(self)</dt><dd><tt>Return&nbsp;hash(self).</tt></dd></dl>
@@ -165,7 +165,7 @@ Arguments:<br>
 &nbsp;&nbsp;&nbsp;&nbsp;event:&nbsp;An&nbsp;<a href="#Performance">Performance</a>&nbsp;<a href="builtins.html#object">object</a>.</tt></dd></dl>
 
 <hr>
-Data descriptors inherited from <a href="events.html#Event">Event</a>:<br>
+Data descriptors inherited from <a href="project.events.html#Event">Event</a>:<br>
 <dl><dt><strong>__dict__</strong></dt>
 <dd><tt>dictionary&nbsp;for&nbsp;instance&nbsp;variables&nbsp;(if&nbsp;defined)</tt></dd>
 </dl>
