--- a/documentation/project.users.html
+++ b/documentation/project.users.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html><head><title>Python: module users</title>
+<html><head><title>Python: module project.users</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head><body bgcolor="#f0f0f8">
 
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="heading">
 <tr bgcolor="#7799ee">
 <td valign=bottom>&nbsp;<br>
-<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>users</strong></big></big></font></td
+<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong><a href="project.html"><font color="#ffffff">project</font></a>.users</strong></big></big></font></td
 ><td align=right valign=bottom
 ><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:c%3A%5Cusers%5Cbalaji%5Conedrive%5Cprogramming%5Cprojects%5Ccallhecks%5Cproject%5Cusers.py">c:\users\balaji\onedrive\programming\projects\callhecks\project\users.py</a></font></td></tr></table>
     <p><tt>Define&nbsp;<a href="#User">User</a>&nbsp;and&nbsp;<a href="#Performer">Performer</a>&nbsp;objects.</tt></p>
@@ -21,10 +21,10 @@
 <dt><font face="helvetica, arial"><a href="builtins.html#object">builtins.object</a>
 </font></dt><dd>
 <dl>
-<dt><font face="helvetica, arial"><a href="users.html#User">User</a>
+<dt><font face="helvetica, arial"><a href="project.users.html#User">User</a>
 </font></dt><dd>
 <dl>
-<dt><font face="helvetica, arial"><a href="users.html#Performer">Performer</a>
+<dt><font face="helvetica, arial"><a href="project.users.html#Performer">Performer</a>
 </font></dt></dl>
 </dd>
 </dl>
@@ -34,7 +34,7 @@
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
 <tr bgcolor="#ffc8d8">
 <td colspan=3 valign=bottom>&nbsp;<br>
-<font color="#000000" face="helvetica, arial"><a name="Performer">class <strong>Performer</strong></a>(<a href="users.html#User">User</a>)</font></td></tr>
+<font color="#000000" face="helvetica, arial"><a name="Performer">class <strong>Performer</strong></a>(<a href="project.users.html#User">User</a>)</font></td></tr>
     
 <tr bgcolor="#ffc8d8"><td rowspan=2><tt>&nbsp;&nbsp;&nbsp;</tt></td>
 <td colspan=2><tt><a href="#Performer">Performer</a>(name,&nbsp;zip_code,&nbsp;biography)<br>
@@ -42,8 +42,8 @@
 A&nbsp;user&nbsp;who&nbsp;can&nbsp;apply&nbsp;to&nbsp;perform&nbsp;at&nbsp;an&nbsp;event.<br>&nbsp;</tt></td></tr>
 <tr><td>&nbsp;</td>
 <td width="100%"><dl><dt>Method resolution order:</dt>
-<dd><a href="users.html#Performer">Performer</a></dd>
-<dd><a href="users.html#User">User</a></dd>
+<dd><a href="project.users.html#Performer">Performer</a></dd>
+<dd><a href="project.users.html#User">User</a></dd>
 <dd><a href="builtins.html#object">builtins.object</a></dd>
 </dl>
 <hr>
@@ -63,7 +63,7 @@ Arguments:<br>
 &nbsp;&nbsp;&nbsp;&nbsp;event:&nbsp;An&nbsp;Performance&nbsp;<a href="builtins.html#object">object</a>.</tt></dd></dl>
 
 <hr>
-Methods inherited from <a href="users.html#User">User</a>:<br>
+Methods inherited from <a href="project.users.html#User">User</a>:<br>
 <dl><dt><a name="Performer-__eq__"><strong>__eq__</strong></a>(self, other)</dt><dd><tt>Return&nbsp;self==value.</tt></dd></dl>
 
 <dl><dt><a name="Performer-__hash__"><strong>__hash__</strong></a>(self)</dt><dd><tt>Return&nbsp;hash(self).</tt></dd></dl>
@@ -77,7 +77,7 @@ Arguments:<br>
 &nbsp;&nbsp;&nbsp;&nbsp;event:&nbsp;An&nbsp;Performance&nbsp;<a href="builtins.html#object">object</a>.</tt></dd></dl>
 
 <hr>
-Data descriptors inherited from <a href="users.html#User">User</a>:<br>
+Data descriptors inherited from <a href="project.users.html#User">User</a>:<br>
 <dl><dt><strong>__dict__</strong></dt>
 <dd><tt>dictionary&nbsp;for&nbsp;instance&nbsp;variables&nbsp;(if&nbsp;defined)</tt></dd>
 </dl>
