--- a/documentation/project.venues.html
+++ b/documentation/project.venues.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html><head><title>Python: module venues</title>
+<html><head><title>Python: module project.venues</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head><body bgcolor="#f0f0f8">
 
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="heading">
 <tr bgcolor="#7799ee">
 <td valign=bottom>&nbsp;<br>
-<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>venues</strong></big></big></font></td
+<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong><a href="project.html"><font color="#ffffff">project</font></a>.venues</strong></big></big></font></td
 ><td align=right valign=bottom
 ><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:c%3A%5Cusers%5Cbalaji%5Conedrive%5Cprogramming%5Cprojects%5Ccallhecks%5Cproject%5Cvenues.py">c:\users\balaji\onedrive\programming\projects\callhecks\project\venues.py</a></font></td></tr></table>
     <p><tt>Define&nbsp;<a href="#Venue">Venue</a>&nbsp;<a href="builtins.html#object">object</a>.</tt></p>
@@ -21,7 +21,7 @@
 <dt><font face="helvetica, arial"><a href="builtins.html#object">builtins.object</a>
 </font></dt><dd>
 <dl>
-<dt><font face="helvetica, arial"><a href="venues.html#Venue">Venue</a>
+<dt><font face="helvetica, arial"><a href="project.venues.html#Venue">Venue</a>
 </font></dt></dl>
 </dd>
 </dl>
