--- a/documentation/project.events.html
+++ b/documentation/project.events.html
@@ -66,7 +66,7 @@ Arguments:<br>
 <dl><dt><a name="Event-overlaps"><strong>overlaps</strong></a>(self, event)</dt><dd><tt>Return&nbsp;true&nbsp;if&nbsp;this&nbsp;event&nbsp;overlaps&nbsp;with&nbsp;the&nbsp;given&nbsp;event.<br>
 &nbsp;<br>
 Arguments:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;event:&nbsp;An&nbsp;<a href="#Performance">Performance</a>&nbsp;<a href="builtins.html#object">object</a>.</tt></dd></dl>
+&nbsp;&nbsp;&nbsp;&nbsp;event:&nbsp;An&nbsp;<a href="#Event">Event</a>&nbsp;<a href="builtins.html#object">object</a>.</tt></dd></dl>
 
 <hr>
 Data descriptors defined here:<br>
