--- a/documentation/project.venues.html
+++ b/documentation/project.venues.html
@@ -15,7 +15,7 @@
 <tr bgcolor="#ee77aa">
 <td colspan=3 valign=bottom>&nbsp;<br>
 <font color="#ffffff" face="helvetica, arial"><big><strong>Classes</strong></big></font></td></tr>
-    
+
 <tr><td bgcolor="#ee77aa"><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td>&nbsp;</td>
 <td width="100%"><dl>
 <dt><font face="helvetica, arial"><a href="builtins.html#object">builtins.object</a>
@@ -30,7 +30,7 @@
 <tr bgcolor="#ffc8d8">
 <td colspan=3 valign=bottom>&nbsp;<br>
 <font color="#000000" face="helvetica, arial"><a name="Venue">class <strong>Venue</strong></a>(<a href="builtins.html#object">builtins.object</a>)</font></td></tr>
-    
+
 <tr bgcolor="#ffc8d8"><td rowspan=2><tt>&nbsp;&nbsp;&nbsp;</tt></td>
 <td colspan=2><tt><a href="#Venue">Venue</a>(name,&nbsp;address)<br>
 &nbsp;<br>
@@ -61,7 +61,7 @@ Raises:<br>
 <dl><dt><a name="Venue-host"><strong>host</strong></a>(self, event)</dt><dd><tt>Add&nbsp;the&nbsp;given&nbsp;event&nbsp;to&nbsp;the&nbsp;venue's&nbsp;list&nbsp;of&nbsp;events.<br>
 &nbsp;<br>
 Arguments:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;events:&nbsp;An&nbsp;Performance&nbsp;instance</tt></dd></dl>
+&nbsp;&nbsp;&nbsp;&nbsp;events:&nbsp;An&nbsp;Event&nbsp;instance</tt></dd></dl>
 
 <hr>
 Data descriptors defined here:<br>
